--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../juicy-color-picker/src/juicy-color-picker.html" />
 <link rel="import" href="juicy-border-picker.html" />
 
-<polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles tileLists">
+<polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles tileLists modified">
     <template>
         <link href="css/jte-fontawesome.css" rel="stylesheet" />
         <style>
@@ -95,7 +95,7 @@
             .drop-down .expandable {
                 max-width: none;
             }
-            
+
             .sourceActions {
                 text-align: right;
             }
