--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -6,7 +6,7 @@
 <link rel="import" href="juicy-draggable.html" />
 <link rel="import" href="juicy-resizable.html" />
 
-<polymer-element name="juicy-tile-editor" attributes="selectionMode">
+<polymer-element name="juicy-tile-editor" attributes="selectionMode modified">
   <template>
       <link href="css/jte-fontawesome.css" rel="stylesheet" />
     <style>
@@ -185,6 +185,7 @@
                               selecteditems="{{selectedItems}}"
                               editedtiles="{{editedTiles}}"
                               tilelists="{{tileLists}}"
+                              modified="{{modified}}"
                               on-juicy-tile-editor-revert="{{revertAction}}"
                               on-juicy-tile-editor-form-tree-changed="{{treeChangedAction}}"
                               on-juicy-tile-editor-clear="{{clearAction}}"
