--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -33,6 +33,8 @@
     <!-- Style sheets -->
     <link rel="import" href="/sys/bootstrap.html" />
     <link rel="stylesheet" href="/Launcher/css/style.css" />
+
+    <link rel="shortcut icon" href="/Launcher/favicon.ico" />
 </head>
 <body is="launcher-main">
     <template id="root" bind>
