--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
@@ -155,20 +155,10 @@ version: 0.1.0
                             elementStyle.width = child.widthAdaptive || child.widthDynamic ? "100%" : child.width + "px";
                             // elementStyle.height = ( child.height /*+ 2 * oversize*/ ) + "px";
                             elementStyle.height = child.heightAdaptive || child.heightDynamic ? "100%" : child.height + "px";
-                            if (child.background !== undefined) {
-                                elementStyle.backgroundColor = child.background || "transparent";
-                            } else {
-                                elementStyle.backgroundColor = "";
+                            if(child.background !== undefined) {
+                            elementStyle.backgroundColor = child.background || "transparent";
                             }
-                            elementStyle.outline = child.outline || "";
-
-                            if (oversize) {
-                                elementStyle.padding = oversize + "px";
-                                elementStyle.margin = "-" + oversize + "px";
-                            } else {
-                                elementStyle.padding = "";
-                                elementStyle.margin = "";
-                            }
+                            elementStyle.border = child.border;
                         }
 
                         if(child.items){// virtual container
