--- a/src/Launcher/wwwroot/sys/juicy-tile-list/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/index.html
@@ -26,8 +26,10 @@ juicy-tile-list{
     padding:1em;
     box-shadow:     inset 0px 0px 10px 0px rgba(50, 50, 50, 0.6);
 }
-juicy-tile-list #container>*, /** <-- oh, our `beloved` IE does not get concept of Shadow DOM */
-juicy-tile-list>*{
+/* juicy-tile-list>*{ */
+/** <-- oh, our `beloved` IE does not get concept of Shadow DOM */
+juicy-tile-list #container>*, 
+juicy-tile-list > *:not(#container){
     box-shadow:     0px 0px 10px 0px rgba(50, 50, 50, 0.75);
     text-align: center;
     border-radius: 2px;
@@ -44,7 +46,7 @@ section input{
     <h1>&lt;juicy-tile-list&gt;</h1>
     <blockquote><p>Masonry-like Polymer Element for sortable tiles that packs efficiently without changing HTML structure (changes CSS only).</p></blockquote>
     <template bind>
-        <juicy-tile-list setup="{{setup}}" gutter="10">
+        <juicy-tile-list setup="{{setup}}" gutter="10" refreshOnResize>
             <div>0</div>
             <div>
                 <button>1</button>
