Update Polyjuice/launcher-include@204628ac5f, and launcher-launchpad to use new juicy-tile-list

--- a/src/Launcher/wwwroot/sys/polyjuice-include/launcher-root-partial.html
+++ b/src/Launcher/wwwroot/sys/polyjuice-include/launcher-root-partial.html
@@ -28,7 +28,9 @@ Uses juicy-tiles setup given from DB as juicyTilesSetup.
             'heightAuto': true,
             'width': '100%',
             'heightDynamic': true
-        }">
+        }"
+        refreshonmutation
+        refreshonresize>
       <template is="imported-template" content="{{Html}}"></template>
     </juicy-tile-grid>
    <!-- unfortunately [[ obj ]] does not work deep (for nested properties) so we need clonedSetup-->
