--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -26,7 +26,9 @@
             'width': 68
           }"
         gutter="20"
-        setup="[[ json._setup | clonedSetup ]]">
+        setup="[[ json._setup | clonedSetup ]]"
+        refreshonmutation
+        refreshonresize>
     </juicy-tile-grid>
   </template>
 <script>
