Juicy/juicy-tile-list@43b855d
Juicy/juicy-tile-list@43b855dfd4c8c297a432dabef321301d8d1c3ad1

--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -107,7 +107,8 @@ version: 0.2.2
                                     !(child instanceof HTMLStyleElement) &&
                                     !(child instanceof HTMLTemplateElement) &&
                                     !(child.nodeName == "PUPPET-MORPHURL") && //ok, this is too much. ideas?
-                                    !(child instanceof HTMLScriptElement);
+                                    !(child instanceof HTMLScriptElement) &&
+                                    !(child instanceof Comment);
                         });
         }
 
