Use Juicy/juicy-tile-grid#fractions@87efcefc1d
 - Juicy/juicy-tile-editor#fractions@1eb399f2d4
 - Polyjuice/launcher-include#fractions@3ad14ba399
 - Juicy/juicy-tile-list@db27235a3e

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/index.html
@@ -83,7 +83,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
         </div>
         <script>
             document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
-                getModel(e.target).editingMode = false;
+                e.target.templateInstance.model.editingMode = false;
             });
         </script>
     </template>
