--- a/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
+++ b/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
@@ -19,9 +19,9 @@ version: 0.0.5
 <template id="partial-template">
   <template bind>
     <!-- FIXME: one-way binding here is temporary workaround for servers not accepting JSON-Patch (tomalec) -->
-    <juicy-tiles-setup-sync 
-        name="{{PartialId}}" 
-        storedValue="[[juicyTilesSetup]]" 
+    <juicy-tiles-setup-sync
+        name="{{PartialId}}"
+        storedValue="[[juicyTilesSetup]]"
         apiUrl="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
     <juicy-tile-grid
         name="{{PartialId}}"
@@ -29,10 +29,10 @@ version: 0.0.5
         defaultTileSetup="{
             'heightAuto': true,
             'width': '100%',
-            'heightDynamic': true
+            'widthFlexible': true,
+            'heightFlexible': true
         }"
-        refreshonmutation
-        refreshonresize>
+        refreshonmutation>
       <template is="imported-template" content="{{Html}}"></template>
     </juicy-tile-grid>
    <!-- unfortunately [[ obj ]] does not work deep (for nested properties) so we need clonedSetup-->
@@ -78,7 +78,7 @@ version: 0.0.5
       }
       var partial = undefined;
       var polyjuiceInclude = this;
-      // define a setter for partial attribute, 
+      // define a setter for partial attribute,
       // so it could be change by VanillaJs without Polymer Template Binding
       Object.defineProperty(this,"partial",{
         set: function(newValue){
@@ -157,7 +157,7 @@ version: 0.0.5
         if(this.isAttached && html){
           this.innerTempl.model = this.partial;
         }
-      }      
+      }
     };
     /**
      * Support for Polymers object to attribute binding
@@ -196,6 +196,6 @@ version: 0.0.5
 
     document.registerElement('polyjuice-include', {
       prototype: LauncherPartialPrototype
-    });   
+    });
   })();
 </script>
