Remove heightFlexible from defaultTileSetup Polyjuice/launcher-include@0e0156c49c - Polyjuice/Launcher#141

--- a/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
+++ b/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
@@ -29,8 +29,7 @@ version: 0.0.5
         defaultTileSetup="{
             'heightAuto': true,
             'width': '100%',
-            'widthFlexible': true,
-            'heightFlexible': true
+            'widthFlexible': true
         }"
         refreshonmutation>
       <template is="imported-template" content="{{Html}}"></template>
