Replace width/heightAuto with precalculateWidth/Height
https://github.com/Juicy/juicy-tile-list/issues/30

--- a/src/Launcher/wwwroot/sys/polyjuice-include/launcher-root-partial.html
+++ b/src/Launcher/wwwroot/sys/polyjuice-include/launcher-root-partial.html
@@ -25,7 +25,7 @@ Uses juicy-tiles setup given from DB as juicyTilesSetup.
         name="{{PartialId}}"
         setup="[[ juicyTilesSetup | clonedSetup  ]]"
         defaultTileSetup="{
-            'heightAuto': true,
+            'precalculateHeight': true,
             'width': '100%',
             'heightDynamic': true
         }"
