--- a/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
+++ b/src/Launcher/wwwroot/sys/polyjuice-include/polyjuice-include.html
@@ -27,7 +27,7 @@ version: 0.0.5
         name="{{PartialId}}"
         setup="[[ juicyTilesSetup | clonedSetup  ]]"
         defaultTileSetup="{
-            'heightAuto': true,
+            'precalculateHeight': true,
             'width': '100%',
             'heightDynamic': true
         }"
