Update bower dependencies:
 - Juicy/juicy-tile-grid@0.2.0
 - Juicy/juicy-tile-list@0.3.0
 - Juicy/juicy-tile-editor@0.1.0
 - Polyjuice/launcher-include@0.0.6
 - Juicy/juicy-highlight@1925565bf8

--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/index.html
@@ -93,7 +93,7 @@ juicy-jsoneditor{
             <div>5</div>
             <div>
                 <h4>6</h4>
-                <p><code>heightAuto: true</code> - pre-calculate element size before packing.</p>
+                <p><code>precalculateHeight: true</code> - pre-calculate element size before packing.</p>
             </div>
             <div>7</div>
             <div>8</div>
@@ -151,7 +151,7 @@ juicy-jsoneditor{
                     {
                         id:6,
                         priority:0.3,
-                        heightAuto: true,
+                        precalculateHeight: true,
                         width: 100
                     },
                     {
