--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/tests/grid_building_algorithm.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/tests/grid_building_algorithm.html
@@ -205,7 +205,7 @@ var model = {
     ]
   },
   fixVSflex_rows : {
-    direction: "downRight",
+    direction: "vertical",
     items:[
       {
           id:0,
