--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/tests/fractions/basic.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/tests/fractions/basic.html
@@ -78,7 +78,7 @@ var model = {
   },
   setup2 : {
     gutter: 0,
-    direction: "downRight",
+    direction: "vertical",
     items:[
       {
           id:0,
