--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-list
 @demo https://Juicy.github.io/juicy-tile-list/
-version: 0.3.0
+version: 0.3.1
 -->
 <!-- Import Polymer -->
 <link rel="import" href="../../polymer/polymer.html">
@@ -30,6 +30,7 @@ version: 0.3.0
         polyfill-next-selector { content: ':host #container> .juicy-tile'; }
         .juicy-tile{
             position: absolute;
+            display: inline-block;
         }
         polyfill-next-selector { content: ':host #container> .containerBackground'; }
         .containerBackground{
