Attempt to fix launch-pad exception
https://github.com/Polyjuice/Launcher/issues/146

--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -143,7 +143,7 @@
     // iconsHtml changed
     LauncherLaunchpadPrototype.jsonChanged = function (oldVal, newVal) {
       this.parseJson(newVal);
-      if( newVal.icons.Html ){
+      if (newVal.icons && newVal.icons.Html) {
         var launchpad = this;
         loadIconsTemplate(
           "/launcher/launchpad" + newVal.icons.Html,
