--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -167,6 +167,20 @@
         template.setAttribute("bind","");
 
         if( tiles ){
+            tiles = Array.prototype.slice.call(tiles, 0);
+            tiles.sort(function (a, b) {
+                var at = a.getAttribute("appname").trim();
+                var bt = b.getAttribute("appname").trim();
+
+                if (at < bt) {
+                    return -1;
+                } else if (at > bt) {
+                    return 1;
+                }
+
+                return 0;
+            });
+
           // wrap each tile in template and add to aggregated one
           for( var nodeNo=0; nodeNo < tiles.length; nodeNo++){
             var tile = tiles[nodeNo];
