--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-list
 @demo https://Juicy.github.io/juicy-tile-list/
-version: 0.3.1
+version: 0.3.2
 -->
 <!-- Import Polymer -->
 <link rel="import" href="../../polymer/polymer.html">
@@ -499,8 +499,8 @@ version: 0.3.1
                       tiles[ itemSetup.id ] = tile;
                         tile.id = itemSetup.id;
                       this.$.container.appendChild(tile);
-                    } else {
-                        this.$.container.appendChild(tile);
+                    } else if(!tile.parentElement){
+                      this.$.container.appendChild(tile);
                     }
 
                     (itemSetup.content != undefined) && (tile.innerHTML = itemSetup.content);
